Align image correctly

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -23,7 +23,8 @@
 }
 
 .panel {
-  padding: 32px;
+  padding: 24px;
+  padding-top: 56px;
 }
 
 .panel-text {
@@ -44,6 +45,8 @@
   display: flex;
   -webkit-align-items: center;
   align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
   img {
     -webkit-filter: drop-shadow(0px 5px 20px #000 );
     filter: drop-shadow(0px 5px 20px #000);
